--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.fabiendem.defib68"
-        minSdkVersion 9
+        minSdkVersion 11
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -25,4 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.google.android.gms:play-services:4.2.42'
     compile 'com.google.maps.android:android-maps-utils:0.3+'
+    compile 'uk.co.chrisjenx:calligraphy:1.2.0'
+
+
 }
