--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.3+'
     compile 'uk.co.chrisjenx:calligraphy:1.2.0'
     compile 'com.melnykov:floatingactionbutton:1.1.0'
+    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+
 }
