--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/map" >
-            <intent-filter>
+            android:label="@string/app_name" >
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
