--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.1.0'
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.avast:android-styled-dialogs:2.1.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.2.1@aar') {
         transitive = true;
     }
