--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.fabiendem.defib68"
+        applicationId "com.fablap.defib"
         minSdkVersion 11
         targetSdkVersion 21
         versionCode 1
@@ -33,6 +33,9 @@ android {
         }
 
         releaseCandidate {
+            debuggable true
+            signingConfig signingConfigs.debug
+            minifyEnabled false
             buildConfigField 'boolean', 'IS_CRASHLYTICS_ENABLED', 'true'
         }
 
@@ -58,7 +61,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.avast:android-styled-dialogs:2.1.0'
     compile 'com.nispok:snackbar:2.9.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.2.1@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
         transitive = true;
     }
 }
