--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ android {
         releaseCandidate {
             debuggable true
             signingConfig signingConfigs.debug
-            minifyEnabled false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField 'boolean', 'IS_CRASHLYTICS_ENABLED', 'true'
         }
 
