Add skeleton for 3 slides tutorial

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
 }
 
 
@@ -65,4 +69,5 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
         transitive = true;
     }
+    compile 'com.github.chenupt.android:springindicator:1.0.1@aar'
 }
