--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,21 +24,26 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="9ac65587b742bad00d8ad30936196b9e8cffff2c" />
 
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
-        <intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.TutorialActivity"
+            android:theme="@style/AppTheme.TranslucentStatusBar.WhiteBackground"
+            android:label="DAE68"
+            android:screenOrientation="portrait">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <meta-data
-            android:name="com.crashlytics.ApiKey"
-            android:value="9ac65587b742bad00d8ad30936196b9e8cffff2c" />
     </application>
 
 </manifest>
