--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.avast:android-styled-dialogs:2.1.0'
     compile 'com.nispok:snackbar:2.9.1'
+    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
         transitive = true;
     }
