--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:1.2.0'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.avast:android-styled-dialogs:2.1.0'
+    compile 'com.avast:android-styled-dialogs:2.2.+'
     compile 'com.nispok:snackbar:2.9.1'
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
