--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.+'
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.android.support:support-annotations:21.0.+'
-    compile 'com.google.android.gms:play-services-location:6.5.87'
-    compile 'com.google.android.gms:play-services-maps:6.5.87'
+    compile 'com.google.android.gms:play-services-location:7.0.+'
+    compile 'com.google.android.gms:play-services-maps:7.0.+'
     compile 'com.google.maps.android:android-maps-utils:0.3+'
     compile 'uk.co.chrisjenx:calligraphy:2.0.+'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
