--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,20 +30,23 @@ android {
 
         debug {
             buildConfigField 'boolean', 'IS_CRASHLYTICS_ENABLED', 'false'
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
         }
 
-        releaseCandidate {
+        staging {
             debuggable true
             signingConfig signingConfigs.debug
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField 'boolean', 'IS_CRASHLYTICS_ENABLED', 'true'
+            applicationIdSuffix ".staging"
+            versionNameSuffix "-staging"
         }
 
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
             buildConfigField 'boolean', 'IS_CRASHLYTICS_ENABLED', 'true'
         }
     }
