--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ android {
         }
 
         release {
+            //noinspection GroovyAssignabilityCheck
             signingConfig signingConfigs.releaseSigning
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
